--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,7 @@
 
 		<script src="https://t1.kakaocdn.net/kakao_js_sdk/2.6.0/kakao.min.js"
 		integrity="sha384-6MFdIr0zOira1CHQkedUqJVql0YtcZA1P0nbPrQYJXVJZUkTk/oX4U9GhUIs3/z8" crossorigin="anonymous"></script>
+		<script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js" charset="utf-8"></script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
